$Id: ChangeLog 3758 2013-01-26 18:11:28Z chrfranke $

2013-01-26  Christian Franke  <franke@computer.org>

	Windows smartd: Add eventlog MESSAGETABLE resource.
	Install/remove smartd.exe as event message file.

2013-01-26  Christian Franke  <franke@computer.org>

	Windows: Add required string CompanyName to VERSIONINFO.

2013-01-23  Christian Franke  <franke@computer.org>

	Windows: Add VERSIONINFO resource to exe files.

2013-01-23  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/C400/m4: m4 mSATA variant
	- Indilinx Barefoot 3 based SSDs
	- Intel DC S3700 Series SSDs
	- Samsung based SSD: Samsung SSD 840 Series

2013-01-18  Christian Franke  <franke@computer.org>

	AUTHORS: Convert to UTF-8.  Sort names.  Replace tabs.

2013-01-18  Christian Franke  <franke@computer.org>

	Rename configure.in to configure.ac to silence warning from
	new automake.
	autogen.sh: automake 1.12.5 is OK.

2013-01-16  Christian Franke  <franke@computer.org>

	atacmds.cpp: Fix assignment of BYTEORDER from -v option
	(Regression from r3719).

2013-01-13  Ole Jørgen Legård  <ole@smartautomation.no>

	os_qnxnto.cpp: Fix include of errno.h.

2013-01-12  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Mushkin Callisto deluxe, SuperSSpeed S301
	- Intel 320 Series SSDs: 'B' (7mm) variant (ticket #257)
	- SAMSUNG SpinPoint F1 EG
	- SAMSUNG SpinPoint P80: SP0401N/TJ100-30
	- Western Digital Caviar Black: 4TB
	- Western Digital Caviar Black (AF): Remove non-AF models
	- Western Digital My Passport (USB, AF): 5000L, 10J variants
	- USB: WD My Passport USB 3.0 (0x1058:0x07a8)
	- USB: WD My Book Studio II (0x1058:0x1105)

2013-01-02  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: ADATA S396, Kingston 3K, V+
	- Indilinx Everest/Martini based SSDs: OCZ VERTEX PLUS
	- Samsung based SSD: Samsung SSD 840 PRO Series

2013-01-02  Christian Franke  <franke@computer.org>
